assets/css/style.css
body {
  background-image: url("../images/rainier.png");
  background-repeat: no-repeat;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 1.25;
}

ul {
  list-style-type: none;
  padding: 0%;
}

li.yellow {
  background-color: rgb(248, 248, 68);
  max-width: 80px;
}

li.green {
  background-color: rgb(48, 155, 48);
  max-width: 80px;
}

li.orange {
  background-color: rgb(255, 182, 47);
  max-width: 80px;
}

li.red {
  background-color: rgb(163, 24, 24);
  color: white;
  max-width: 80px;
}

/* Padding - all sides */
.p-0 {
  padding: 0;
}

.p-1 {
  padding: 0.25rem;
}

.p-2 {
  padding: 0.625rem;
}

.p-3 {
  padding: 1rem;
}

.p-4 {
  padding: 1.375rem;
}

.p-5 {
  padding: 1.625rem;
}

.text-center {
  text-align: center;
}

.text-white {
  color: #ffffff;
}

/* margin y-axis */
/* Margin - y axis */
.my-0 {
  margin-top: 0;
  margin-bottom: 0;
}

.my-1 {
  margin-top: 0.375rem;
  margin-bottom: 0.375rem;
}

.my-2 {
  margin-top: 0.625rem;
  margin-bottom: 0.625rem;
}

.my-3 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.my-4 {
  margin-top: 1.375rem;
  margin-bottom: 1.375rem;
}

.my-5 {
  margin-top: 1.625rem;
  margin-bottom: 1.625rem;
}

.my-auto {
  margin-top: auto;
  margin-bottom: auto;
}

/* margins all sides 
  credit: class exercises
*/
.m-0 {
  margin: 0;
}

.m-1 {
  margin: 0.25rem;
}

.m-2 {
  margin: 0.625rem;
}

.m-3 {
  margin: 1rem;
}

.m-4 {
  margin: 1.375rem;
}

.m-5 {
  margin: 1.625rem;
}

.m-auto {
  margin: auto;
}

/* BACKGROUND UTILS */
.bg-header {
  background-image: linear-gradient(to right, rgb(27, 134, 249) , rgb(1, 60, 99));
}

.fill {
  width: 100%;
}

.row {
  width: 100%;
}

.card {
  background-color: rgb(79, 175, 248);
  color: whitesmoke; 
}

.city-name 
{
  text-transform:capitalize;
}

div.search-area {
  background-color:rgba(226, 218, 218, 0.8);
}

.btn-outline-secondary {
  color: black;
}

.card, 
.one-day-display {
  background-color: rgb(81, 160, 250, 0.8);
}

